cluster-server-01/apps/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
  - host: jellyseerr.server.schwarz47.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr-service
            port:
              name: web
  tls:
  - hosts:
    - jellyseerr.server.schwarz47.at
    secretName: server-schwarz47-at-tls
